2011-01-03  Per Bothner  <per@bothner.com>

	* SimpleVector.java (checkCanWrite): New method.
	Call checkCanWrite before any mutation.
	* FVector.java: Likewise call checkCanWrite before any mutation.
	* ConstVector.java: New class, extends FVector.
	(checkCanWrite): Override to throw exception.
	* Makefile.am: Update.

2010-11-27  Per Bothner  <per@bothner.com>

	* AbstractFormat.java (writeObject): Only closeThis, don't close.

2010-11-21  Per Bothner  <per@bothner.com>

	Partially generic-ize.
	* Sequence.java: Add generic parameter for element type.
	* Array.java: Likewise.
	* AbstractSequence.java: Likewise.
	* ExtSequence.java: Likewise.
	* SimpleVector.java: Likewise.
	* FVector.java: Likewise.
	* SeqPosition.java: Likewise, for pointed-to element type.

2010-06-30  Per Bothner  <per@bothner.com>

	* FilterConsumer.java: Change to implement XConsumer.
	(writeComment, writeCDATA, writeProcessingInstruction,
	beginEntity, endEntity): New methods.
	(before): New empty method to provide override hook.

	* FilterConsumer.java: (append(CharSequence,int,int),
	append(CharSequence)):  Re-implement to call write method.

2010-06-21  Per Bothner  <per@bothner.com>

	* ByteVector.java: New abstract class, extends SimpleVector.
	* S8Vector.java: Change to extend ByteVector.
	* U8Vector.java: Likewise.
	* Makefile.am: Update accordingly.

2010-06-18  Per Bothner  <per@bothner.com>

	* TreeList.java (nextMatching, nextDataIndex): Add missing
	FLOAT_FOLLOWS cases.

2009-11-19  Per Bothner  <per@bothner.com>

	* StableVector.java (adjustPositions, removePosRange): Fix thinkos.
	(checkInvariants): New commented-out test method.

2009-10-17  Per Bothner  <per@bothner.com>

	* FVector.java (make): New helper method.

2009-08-06  Per Bothner  <per@bothner.com>

	Fix for Savannah bug #27188 "Sequence printing".
	* SubSequence.java (startPos, endPos): New methods.

	* SubSequence.java (subSequencePos): New optimized method.
	* AbstractSequence.java (subList): Use subSequencePos.
